// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards render ProjectCard 1`] = `
.emotion-33 {
  display: grid;
  grid-template-columns: 185px;
  grid-gap: 5px;
  padding: 5px 5px 10px 5px;
}

.emotion-25 {
  width: 100%;
  display: grid;
  grid-auto-flow: row;
  grid-auto-rows: min-content;
  grid-gap: 5px;
}

.emotion-19 {
  height: 20px;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-19 > :first-child {
  border-top-left-radius: 999px;
  border-bottom-left-radius: 999px;
}

.emotion-19 > :last-child {
  border-top-right-radius: 999px;
  border-bottom-right-radius: 999px;
}

.emotion-24 {
  height: 20px;
  width: 100%;
  display: grid;
  grid-auto-columns: min-content;
  grid-auto-flow: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-2 {
  width: 100%;
  padding: 0 15px 0 0;
}

.emotion-26 {
  padding: 0 5px;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 195px;
  height: 214px;
}

.emotion-32 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: min-content;
  grid-gap: 5px;
  overflow: hidden;
  width: 100%;
  padding: 0 5px;
}

.emotion-35 {
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  box-shadow: 0 10px 30px 0 rgba(0,0,0,0.1);
  border-radius: 5px;
  background-color: #fff;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  position: relative;
  cursor: pointer;
}

.emotion-35:hover {
  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 0;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
  position: absolute;
  top: 0;
  right: 0;
  width: 20px;
  height: 20px;
  font-size: 12px;
  color: #fff;
  background: #802FD9;
  cursor: pointer;
  z-index: 1;
  box-shadow: -1px 1px 5px rgba(0,0,0,0.15);
  border-radius: 0 5px 0 5px;
}

.emotion-0:focus {
  outline: 0;
}

.emotion-0:hover,
.emotion-0:focus {
  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
}

.emotion-0:before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  right: 20px;
  width: 10px;
  height: 10px;
  border-radius: 0 5px 0 0;
  box-shadow: 5px 0 0 0 #802FD9;
  z-index: -1;
}

.emotion-0:after {
  content: '';
  display: block;
  position: absolute;
  top: 20px;
  right: 0;
  width: 10px;
  height: 10px;
  border-radius: 0 5px 0 0;
  box-shadow: 0 -5px 0 0 #802FD9;
  z-index: -1;
}

.emotion-1 {
  position: relative;
  font-size: 14px;
  min-height: 20px;
  line-height: 20px;
  font-weight: bold;
  color: #555555;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-radius: 5px;
  text-align: left;
  min-width: 0;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0 5px;
  height: 20px;
  line-height: 20px;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.emotion-3 {
  width: 100%;
  height: 20px;
  max-height: 20px;
  line-height: 20px;
  font-size: 12px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #aaa;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0 5px;
  text-align: left;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  text-transform: uppercase;
}

.emotion-9 {
  height: 1px;
  background-color: #ddd;
  width: 100%;
}

.emotion-16 {
  background-color: #11d1a6;
  border: 1px solid #11d1a6;
  height: inherit;
  width: 40%;
  min-width: 20px;
}

.emotion-17 {
  background-color: #ffffff;
  border: 1px solid #11d1a6;
  height: inherit;
  width: 40%;
  min-width: 20px;
}

.emotion-18 {
  background-color: #ddd;
  border: 1px solid #ddd;
  height: inherit;
  width: 20%;
  min-width: 20px;
}

.emotion-20 {
  height: 20px;
  width: 40px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: clip;
  border-radius: 999px;
  background-color: #11d1a6;
  border: 1px solid #11d1a6;
  color: #ffffff;
  text-align: center;
  font-size: 12px;
  line-height: 18px;
  padding: 0 2px;
}

.emotion-20 > svg {
  margin: 0 2px 0 0;
}

.emotion-21 {
  height: 20px;
  width: 40px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: clip;
  border-radius: 999px;
  background-color: #ffffff;
  border: 1px solid #11d1a6;
  color: #11d1a6;
  text-align: center;
  font-size: 12px;
  line-height: 18px;
  padding: 0 2px;
}

.emotion-21 > svg {
  margin: 0 2px 0 0;
}

.emotion-22 {
  height: 20px;
  width: 40px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: clip;
  border-radius: 999px;
  background-color: #ccc;
  border: 1px solid #ccc;
  color: #555555;
  text-align: center;
  font-size: 12px;
  line-height: 18px;
  padding: 0 2px;
}

.emotion-22 > svg {
  margin: 0 2px 0 0;
}

.emotion-23 {
  height: 20px;
  width: 40px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: clip;
  border-radius: 999px;
  background-color: #ddd;
  border: 1px solid #ddd;
  color: #aaa;
  text-align: center;
  font-size: 12px;
  line-height: 18px;
  padding: 0 2px;
}

.emotion-23 > svg {
  margin: 0 2px 0 0;
}

.emotion-27 {
  border-radius: 5px;
  font-size: 12px;
  min-height: 18px;
  line-height: 18px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #123456;
  padding: 0 5px;
  font-weight: bold;
  color: #ffffff;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-28 {
  border-radius: 5px;
  font-size: 12px;
  min-height: 18px;
  line-height: 18px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #FF00FF;
  padding: 0 5px;
  font-weight: bold;
  color: #ffffff;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div
  class="emotion-35"
  id=""
>
  <button
    class="emotion-0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-th-list fa-w-16 fa-fw fa-rotate-90 "
      data-icon="th-list"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M149.333 216v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24v-80c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zM125.333 32H24C10.745 32 0 42.745 0 56v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24zm80 448H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm-24-424v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24zm24 264H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24z"
        fill="currentColor"
      />
    </svg>
  </button>
  <div
    class="emotion-34"
  >
    <div
      class="emotion-33"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          PROJECT TITLE
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-3"
        >
          <span>
            DUE DATE
          </span>
        </div>
        <div
          class="emotion-1"
        >
          <span>
            6/30/2019
          </span>
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-3"
        >
          <span>
            MILESTONES
          </span>
        </div>
        <div
          class="emotion-1"
        >
          
          <span>
            0
          </span>
          
        </div>
      </div>
      <div
        class="emotion-9"
      />
      <div
        class="emotion-5"
      >
        <div
          class="emotion-3"
        >
          <span>
            TASKS
          </span>
        </div>
        <div
          class="emotion-1"
        >
          
          <span>
            20
          </span>
          
        </div>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-3"
        >
          <span>
            OVERDUE
          </span>
        </div>
        <div
          class="emotion-1"
        >
          
          <span>
            2
          </span>
          
        </div>
      </div>
      <div
        class="emotion-26"
      >
        <div
          class="emotion-25"
        >
          <div
            class="emotion-19"
          >
            <div
              class="emotion-16"
            />
            <div
              class="emotion-17"
            />
            <div
              class="emotion-18"
            />
          </div>
          <div
            class="emotion-24"
          >
            <div
              class="emotion-20"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-check-circle fa-w-16 fa-fw "
                data-icon="check-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  fill="currentColor"
                />
              </svg>
              2
            </div>
            <div
              class="emotion-21"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-stopwatch fa-w-14 fa-fw "
                data-icon="stopwatch"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 304c0 114.9-93.1 208-208 208S16 418.9 16 304c0-104 76.3-190.2 176-205.5V64h-28c-6.6 0-12-5.4-12-12V12c0-6.6 5.4-12 12-12h120c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-28v34.5c37.5 5.8 71.7 21.6 99.7 44.6l27.5-27.5c4.7-4.7 12.3-4.7 17 0l28.3 28.3c4.7 4.7 4.7 12.3 0 17l-29.4 29.4-.6.6C419.7 223.3 432 262.2 432 304zm-176 36V188.5c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12V340c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12z"
                  fill="currentColor"
                />
              </svg>
              2
            </div>
            <div
              class="emotion-22"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-forward fa-w-16 fa-fw "
                data-icon="forward"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M500.5 231.4l-192-160C287.9 54.3 256 68.6 256 96v320c0 27.4 31.9 41.8 52.5 24.6l192-160c15.3-12.8 15.3-36.4 0-49.2zm-256 0l-192-160C31.9 54.3 0 68.6 0 96v320c0 27.4 31.9 41.8 52.5 24.6l192-160c15.3-12.8 15.3-36.4 0-49.2z"
                  fill="currentColor"
                />
              </svg>
              0
            </div>
            <div
              class="emotion-23"
            >
              1
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-32"
      >
        <div
          class="emotion-27"
        >
          tag1
        </div>
        <div
          class="emotion-28"
        >
          tag2
        </div>
        <div
          class="emotion-28"
        >
          tag2
        </div>
        <div
          class="emotion-28"
        >
          tag2
        </div>
        <div
          class="emotion-28"
        >
          tag2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cards render ProjectCard 2`] = `
<DocumentFragment>
  .emotion-33 {
  display: grid;
  grid-template-columns: 185px;
  grid-gap: 5px;
  padding: 5px 5px 10px 5px;
}

.emotion-25 {
  width: 100%;
  display: grid;
  grid-auto-flow: row;
  grid-auto-rows: min-content;
  grid-gap: 5px;
}

.emotion-19 {
  height: 20px;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-19 > :first-child {
  border-top-left-radius: 999px;
  border-bottom-left-radius: 999px;
}

.emotion-19 > :last-child {
  border-top-right-radius: 999px;
  border-bottom-right-radius: 999px;
}

.emotion-24 {
  height: 20px;
  width: 100%;
  display: grid;
  grid-auto-columns: min-content;
  grid-auto-flow: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-2 {
  width: 100%;
  padding: 0 15px 0 0;
}

.emotion-26 {
  padding: 0 5px;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 195px;
  height: 214px;
}

.emotion-32 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: min-content;
  grid-gap: 5px;
  overflow: hidden;
  width: 100%;
  padding: 0 5px;
}

.emotion-35 {
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  box-shadow: 0 10px 30px 0 rgba(0,0,0,0.1);
  border-radius: 5px;
  background-color: #fff;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  position: relative;
  cursor: pointer;
}

.emotion-35:hover {
  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 0;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
  position: absolute;
  top: 0;
  right: 0;
  width: 20px;
  height: 20px;
  font-size: 12px;
  color: #fff;
  background: #802FD9;
  cursor: pointer;
  z-index: 1;
  box-shadow: -1px 1px 5px rgba(0,0,0,0.15);
  border-radius: 0 5px 0 5px;
}

.emotion-0:focus {
  outline: 0;
}

.emotion-0:hover,
.emotion-0:focus {
  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
}

.emotion-0:before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  right: 20px;
  width: 10px;
  height: 10px;
  border-radius: 0 5px 0 0;
  box-shadow: 5px 0 0 0 #802FD9;
  z-index: -1;
}

.emotion-0:after {
  content: '';
  display: block;
  position: absolute;
  top: 20px;
  right: 0;
  width: 10px;
  height: 10px;
  border-radius: 0 5px 0 0;
  box-shadow: 0 -5px 0 0 #802FD9;
  z-index: -1;
}

.emotion-1 {
  position: relative;
  font-size: 14px;
  min-height: 20px;
  line-height: 20px;
  font-weight: bold;
  color: #555555;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-radius: 5px;
  text-align: left;
  min-width: 0;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0 5px;
  height: 20px;
  line-height: 20px;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.emotion-3 {
  width: 100%;
  height: 20px;
  max-height: 20px;
  line-height: 20px;
  font-size: 12px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #aaa;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0 5px;
  text-align: left;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  text-transform: uppercase;
}

.emotion-9 {
  height: 1px;
  background-color: #ddd;
  width: 100%;
}

.emotion-16 {
  background-color: #11d1a6;
  border: 1px solid #11d1a6;
  height: inherit;
  width: 40%;
  min-width: 20px;
}

.emotion-17 {
  background-color: #ffffff;
  border: 1px solid #11d1a6;
  height: inherit;
  width: 40%;
  min-width: 20px;
}

.emotion-18 {
  background-color: #ddd;
  border: 1px solid #ddd;
  height: inherit;
  width: 20%;
  min-width: 20px;
}

.emotion-20 {
  height: 20px;
  width: 40px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: clip;
  border-radius: 999px;
  background-color: #11d1a6;
  border: 1px solid #11d1a6;
  color: #ffffff;
  text-align: center;
  font-size: 12px;
  line-height: 18px;
  padding: 0 2px;
}

.emotion-20 > svg {
  margin: 0 2px 0 0;
}

.emotion-21 {
  height: 20px;
  width: 40px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: clip;
  border-radius: 999px;
  background-color: #ffffff;
  border: 1px solid #11d1a6;
  color: #11d1a6;
  text-align: center;
  font-size: 12px;
  line-height: 18px;
  padding: 0 2px;
}

.emotion-21 > svg {
  margin: 0 2px 0 0;
}

.emotion-22 {
  height: 20px;
  width: 40px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: clip;
  border-radius: 999px;
  background-color: #ccc;
  border: 1px solid #ccc;
  color: #555555;
  text-align: center;
  font-size: 12px;
  line-height: 18px;
  padding: 0 2px;
}

.emotion-22 > svg {
  margin: 0 2px 0 0;
}

.emotion-23 {
  height: 20px;
  width: 40px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-overflow: clip;
  border-radius: 999px;
  background-color: #ddd;
  border: 1px solid #ddd;
  color: #aaa;
  text-align: center;
  font-size: 12px;
  line-height: 18px;
  padding: 0 2px;
}

.emotion-23 > svg {
  margin: 0 2px 0 0;
}

.emotion-27 {
  border-radius: 5px;
  font-size: 12px;
  min-height: 18px;
  line-height: 18px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #123456;
  padding: 0 5px;
  font-weight: bold;
  color: #ffffff;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-28 {
  border-radius: 5px;
  font-size: 12px;
  min-height: 18px;
  line-height: 18px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #FF00FF;
  padding: 0 5px;
  font-weight: bold;
  color: #ffffff;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div
    class="emotion-35"
    id=""
  >
    <button
      class="emotion-0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-th-list fa-w-16 fa-fw fa-rotate-90 "
        data-icon="th-list"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M149.333 216v80c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24v-80c0-13.255 10.745-24 24-24h101.333c13.255 0 24 10.745 24 24zM0 376v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H24c-13.255 0-24 10.745-24 24zM125.333 32H24C10.745 32 0 42.745 0 56v80c0 13.255 10.745 24 24 24h101.333c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24zm80 448H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24zm-24-424v80c0 13.255 10.745 24 24 24H488c13.255 0 24-10.745 24-24V56c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24zm24 264H488c13.255 0 24-10.745 24-24v-80c0-13.255-10.745-24-24-24H205.333c-13.255 0-24 10.745-24 24v80c0 13.255 10.745 24 24 24z"
          fill="currentColor"
        />
      </svg>
    </button>
    <div
      class="emotion-34"
    >
      <div
        class="emotion-33"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            PROJECT TITLE
          </div>
        </div>
        <div
          class="emotion-5"
        >
          <div
            class="emotion-3"
          >
            <span>
              DUE DATE
            </span>
          </div>
          <div
            class="emotion-1"
          >
            <span>
              6/30/2019
            </span>
          </div>
        </div>
        <div
          class="emotion-5"
        >
          <div
            class="emotion-3"
          >
            <span>
              MILESTONES
            </span>
          </div>
          <div
            class="emotion-1"
          >
            <span>
              0
            </span>
          </div>
        </div>
        <div
          class="emotion-9"
        />
        <div
          class="emotion-5"
        >
          <div
            class="emotion-3"
          >
            <span>
              TASKS
            </span>
          </div>
          <div
            class="emotion-1"
          >
            <span>
              20
            </span>
          </div>
        </div>
        <div
          class="emotion-5"
        >
          <div
            class="emotion-3"
          >
            <span>
              OVERDUE
            </span>
          </div>
          <div
            class="emotion-1"
          >
            <span>
              2
            </span>
          </div>
        </div>
        <div
          class="emotion-26"
        >
          <div
            class="emotion-25"
          >
            <div
              class="emotion-19"
            >
              <div
                class="emotion-16"
              />
              <div
                class="emotion-17"
              />
              <div
                class="emotion-18"
              />
            </div>
            <div
              class="emotion-24"
            >
              <div
                class="emotion-20"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-check-circle fa-w-16 fa-fw "
                  data-icon="check-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                    fill="currentColor"
                  />
                </svg>
                2
              </div>
              <div
                class="emotion-21"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-stopwatch fa-w-14 fa-fw "
                  data-icon="stopwatch"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M432 304c0 114.9-93.1 208-208 208S16 418.9 16 304c0-104 76.3-190.2 176-205.5V64h-28c-6.6 0-12-5.4-12-12V12c0-6.6 5.4-12 12-12h120c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-28v34.5c37.5 5.8 71.7 21.6 99.7 44.6l27.5-27.5c4.7-4.7 12.3-4.7 17 0l28.3 28.3c4.7 4.7 4.7 12.3 0 17l-29.4 29.4-.6.6C419.7 223.3 432 262.2 432 304zm-176 36V188.5c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12V340c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12z"
                    fill="currentColor"
                  />
                </svg>
                2
              </div>
              <div
                class="emotion-22"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-forward fa-w-16 fa-fw "
                  data-icon="forward"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M500.5 231.4l-192-160C287.9 54.3 256 68.6 256 96v320c0 27.4 31.9 41.8 52.5 24.6l192-160c15.3-12.8 15.3-36.4 0-49.2zm-256 0l-192-160C31.9 54.3 0 68.6 0 96v320c0 27.4 31.9 41.8 52.5 24.6l192-160c15.3-12.8 15.3-36.4 0-49.2z"
                    fill="currentColor"
                  />
                </svg>
                0
              </div>
              <div
                class="emotion-23"
              >
                1
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-32"
        >
          <div
            class="emotion-27"
          >
            tag1
          </div>
          <div
            class="emotion-28"
          >
            tag2
          </div>
          <div
            class="emotion-28"
          >
            tag2
          </div>
          <div
            class="emotion-28"
          >
            tag2
          </div>
          <div
            class="emotion-28"
          >
            tag2
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
